--- a/Visualizacion-datos-Titanic.ipynb
+++ b/Visualizacion-datos-Titanic.ipynb
@@ -43,7 +43,8 @@
    "id": "beebfd72",
    "metadata": {},
    "source": [
-    "![Titanic](https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/RMS_Titanic_3.jpg/220px-RMS_Titanic_3.jpg)"
+    "![Titanic](https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/RMS_Titanic_3.jpg/220px-RMS_Titanic_3.jpg)\n",
+    "Vista del Titanic: Imagen de [Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/RMS_Titanic_3.jpg/220px-RMS_Titanic_3.jpg)"
    ]
   },
   {
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "a8b0dea9",
    "metadata": {},
    "outputs": [],
@@ -66,31 +67,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "68e727b4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Carga de los datos de entrenamiento en un data frame de pandas\n",
     "\n",
-    "datos_entrenamiento = pd.read_csv(\"https://raw.githubusercontent.com/gf0657-programacionsig/2022-ii/main/contenido/3/datos/kaggle/titanic/pasajeros-titanic-entrenamiento.csv\")"
+    "# pasajeros = pd.read_csv(\"https://raw.githubusercontent.com/gf0657-programacionsig/2022-ii/main/contenido/3/datos/kaggle/titanic/pasajeros-titanic-entrenamiento.csv\")\n",
+    "pasajeros = pd.read_csv(\"datos/pasajeros-titanic-entrenamiento.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "8020a518",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Carga de los datos de entrenamiento en un data frame de pandas\n",
     "\n",
-    "datos_entrenamiento = pd.read_csv(\"https://raw.githubusercontent.com/gf0657-programacionsig/2022-ii/main/contenido/3/datos/kaggle/titanic/pasajeros-titanic-entrenamiento.csv\")"
+    "# pasajeros = pd.read_csv(\"https://raw.githubusercontent.com/gf0657-programacionsig/2022-ii/main/contenido/3/datos/kaggle/titanic/pasajeros-titanic-entrenamiento.csv\")\n",
+    "pasajeros = pd.read_csv(\"datos/pasajeros-titanic-entrenamiento.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "c74be569",
    "metadata": {},
    "outputs": [
@@ -322,18 +325,18 @@
        "9      0            237736  30.0708   NaN        C  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datos_entrenamiento.head(10) # Los diez primeros datos"
+    "pasajeros.head(10) # Los diez primeros datos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "f02f716a",
    "metadata": {},
    "outputs": [
@@ -553,13 +556,13 @@
        "890    male  32.0      0      0            370376   7.7500   NaN        Q  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datos_entrenamiento.tail(10) # Los diez últimos datos"
+    "pasajeros.tail(10) # Los diez últimos datos"
    ]
   },
   {
@@ -572,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "1219b2b4",
    "metadata": {},
    "outputs": [
@@ -588,14 +591,14 @@
    "source": [
     "# Tasa de sobrevivencia de mujeres\n",
     "\n",
-    "mujeres_sobrevivientes = datos_entrenamiento.loc[datos_entrenamiento.Sex == 'female'][\"Survived\"]\n",
+    "mujeres_sobrevivientes = pasajeros.loc[pasajeros.Sex == 'female'][\"Survived\"]\n",
     "tasa_sobrevivencia_mujeres = sum(mujeres_sobrevivientes)/len(mujeres_sobrevivientes)\n",
     "\n",
     "print(\"Porcentaje de mujeres que sobrevivieron: {:3.2f}\".format(tasa_sobrevivencia_mujeres))\n",
     "\n",
     "# Tasa de sobrevivencia de hombres\n",
     "\n",
-    "hombres_sobrevivientes = datos_entrenamiento.loc[datos_entrenamiento.Sex == 'male'][\"Survived\"]\n",
+    "hombres_sobrevivientes = pasajeros.loc[pasajeros.Sex == 'male'][\"Survived\"]\n",
     "tasa_sobrevivencia_hombres = sum(hombres_sobrevivientes)/len(hombres_sobrevivientes)\n",
     "\n",
     "print(\"Porcentaje de hombres que sobrevivieron: {:3.2f}\".format(tasa_sobrevivencia_hombres))"
@@ -666,21 +669,21 @@
    "source": [
     "# Tasa de sobrevivencia de pasajeros de primera clase\n",
     "\n",
-    "clase1_sobrevivientes = datos_entrenamiento.loc[datos_entrenamiento.Pclass == 1][\"Survived\"]\n",
+    "clase1_sobrevivientes = pasajeros.loc[pasajeros.Pclass == 1][\"Survived\"]\n",
     "tasa_sobrevivencia_clase1 = sum(clase1_sobrevivientes)/len(clase1_sobrevivientes)\n",
     "\n",
     "print(\"Porcentaje de pasajeros de primera clase que sobrevivieron: {:3.2f}\".format(tasa_sobrevivencia_clase1))\n",
     "\n",
     "# Tasa de sobrevivencia de pasajeros de segunda clase\n",
     "\n",
-    "clase2_sobrevivientes = datos_entrenamiento.loc[datos_entrenamiento.Pclass == 2][\"Survived\"]\n",
+    "clase2_sobrevivientes = pasajeros.loc[pasajeros.Pclass == 2][\"Survived\"]\n",
     "tasa_sobrevivencia_clase2 = sum(clase2_sobrevivientes)/len(clase2_sobrevivientes)\n",
     "\n",
     "print(\"Porcentaje de pasajeros de segunda clase que sobrevivieron: {:3.2f}\".format(tasa_sobrevivencia_clase2))\n",
     "\n",
     "# Tasa de sobrevivencia de pasajeros de tercera clase\n",
     "\n",
-    "clase3_sobrevivientes = datos_entrenamiento.loc[datos_entrenamiento.Pclass == 3][\"Survived\"]\n",
+    "clase3_sobrevivientes = pasajeros.loc[pasajeros.Pclass == 3][\"Survived\"]\n",
     "tasa_sobrevivencia_clase3 = sum(clase1_sobrevivientes)/len(clase3_sobrevivientes)\n",
     "\n",
     "print(\"Porcentaje de pasajeros de tercera clase que sobrevivieron: {:3.2f}\".format(tasa_sobrevivencia_clase3))"
@@ -688,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "fbade67e",
    "metadata": {},
    "outputs": [
@@ -698,7 +701,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -716,13 +719,21 @@
    "source": [
     "# Gráfico de barras de cantidades de sobrevivientes y fallecidos por clase de pasajero\n",
     "\n",
-    "sobrevivientes = datos_entrenamiento[datos_entrenamiento['Survived']==1]['Pclass'].value_counts()\n",
-    "fallecidos = datos_entrenamiento[datos_entrenamiento['Survived']==0]['Pclass'].value_counts()\n",
+    "sobrevivientes = pasajeros[pasajeros['Survived']==1]['Pclass'].value_counts()\n",
+    "fallecidos = pasajeros[pasajeros['Survived']==0]['Pclass'].value_counts()\n",
     "\n",
     "df = pd.DataFrame([sobrevivientes, fallecidos])\n",
     "df.index = ['Sobrevivir', 'Fallecer']\n",
     "df.plot(kind='barh', stacked='True')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "255f0d2a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
